<resources>
    <string name="app_name">Lifestyle App</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="years">years</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="height">Height:</string>
    <string name="feet">feet,</string>
    <string name="inches">inches</string>
    <string name="weight">Weight:</string>
    <string name="pounds">pounds</string>
    <string name="sex">Sex:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="sex_array">
        <item>male</item>
        <item>female</item>
        <item>intersex</item>
    </string-array>
    <string name="activity_level">Activity Level:</string>
    <string-array name="activity_level_array">
        <item>very active</item>
        <item>moderately active</item>
        <item>lightly active</item>
        <item>sedentary</item>
    </string-array>
    <string name="share_location">Share Location</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="submit">Submit</string>
    <string name="update_profile">Update Profile</string>
    <string name="daily_target_caloric_intake">Daily Target Caloric Intake:</string>
    <string name="calculated_bmr_basal_metabolic_rate">Basal Metabolic Rate:</string>
    <string name="bmr_description">Basal metabolic rate, or BMR, refers to the rate at which the body expends energy in order to function while at rest. It is often measured as calories burned over a 24-hour period. This indicates the minimum you would need to consume in a day to perform essential processes like breathing, circulation, cell production, and processing nutrients. BMR can be predicted using a person\'s height, weight, age, and sex. The revised Harris-Benedict equation was used to estimate your BMR above.</string>
    <string name="target_calorie_description">Your daily target caloric intake suggests how many calories you should aim to consume each day. This is sometimes referred to as active metabolic rate, or AMR. This number is calculated based on your BMR and your reported activity level. Higher levels of activity correlate with a greater recommended caloric intake.</string>
</resources>