<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_name_label"
            app:layout_constraintEnd_toStartOf="@id/iv_profile_pic"
            app:layout_constraintStart_toEndOf="@+id/tv_name_label" />

        <TextView
            android:id="@+id/tv_age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_data" />

        <TextView
            android:id="@+id/tv_age_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_age_label"
            app:layout_constraintStart_toEndOf="@+id/tv_age_label" />

        <TextView
            android:id="@+id/tv_years_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/years"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_age_label"
            app:layout_constraintStart_toEndOf="@+id/tv_age_data" />

        <TextView
            android:id="@+id/tv_city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_age_label" />

        <TextView
            android:id="@+id/tv_city_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_city_label"
            app:layout_constraintEnd_toStartOf="@id/iv_profile_pic"
            app:layout_constraintStart_toEndOf="@+id/tv_city_label" />

        <TextView
            android:id="@+id/tv_country_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_city_data" />

        <TextView
            android:id="@+id/tv_country_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/iv_profile_pic"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_country_label"
            app:layout_constraintStart_toEndOf="@+id/tv_country_label" />

        <TextView
            android:id="@+id/tv_height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_country_data" />

        <TextView
            android:id="@+id/tv_feet_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_height_label"
            app:layout_constraintStart_toEndOf="@+id/tv_height_label" />

        <TextView
            android:id="@+id/tv_feet_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/feet"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_height_label"
            app:layout_constraintStart_toEndOf="@+id/tv_feet_data" />

        <TextView
            android:id="@+id/tv_inches_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_height_label"
            app:layout_constraintStart_toEndOf="@+id/tv_feet_label" />

        <TextView
            android:id="@+id/tv_inches_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/inches"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_height_label"
            app:layout_constraintStart_toEndOf="@+id/tv_inches_data" />

        <TextView
            android:id="@+id/tv_weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/weight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_height_label" />

        <TextView
            android:id="@+id/tv_weight_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_weight_label"
            app:layout_constraintStart_toEndOf="@+id/tv_weight_label" />

        <TextView
            android:id="@+id/tv_pounds_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/pounds"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_weight_label"
            app:layout_constraintStart_toEndOf="@+id/tv_weight_data" />

        <TextView
            android:id="@+id/tv_sex_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/sex"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_weight_label" />

        <TextView
            android:id="@+id/tv_sex_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sex_label"
            app:layout_constraintStart_toEndOf="@+id/tv_sex_label" />

        <TextView
            android:id="@+id/tv_activity_level_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/activity_level"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sex_label" />

        <TextView
            android:id="@+id/tv_activity_level_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_activity_level_label"
            app:layout_constraintStart_toEndOf="@+id/tv_activity_level_label" />

        <Button
            android:id="@+id/button_update_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/update_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_activity_level_label" />

        <ImageView
            android:id="@+id/iv_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>